# brainfuck

./: LICENSE.md  Makefile  README.md  bf2c.hs  brainfuck-asm.s  brainfuck.c  brainfuck.hs  brainfuck.py  gdb-commands.txt  index.html  run.py
asm/: .gitignore  Makefile  brainfuck.asm  brainfuck.s  gdb-commands.txt  lldb-commands.txt
c/: Makefile  brainfuck.c
cpp/: .gitignore  Makefile  README.md  brainfuck-jit.cpp  brainfuck-oop.cpp  brainfuck.cpp  brainfuck.h  brainfuck.s  jit.txt  lldb-commands.txt  test.bf
go/: brainfuck.go  run.sh
go/src/stack/: stack.go
haskell/: Makefile  bf2c.hs  brainfuck.hs
javascript/: Makefile  brainfuck.html  brainfuck.js
javascript/pkg/: wasm_brainfuck.js  wasm_brainfuck_bg.wasm
lua/: bf2lua.lua  brainfuck.lua
programs/: dbfi.bf  mandelbrot2.bf  numwarp.bf  primes.bf  random.bf  tolower.bf
python/: brainfuck-rpython-jit.py  brainfuck-rpython.py  brainfuck-simple.py  brainfuck.py
rust/: .gitignore  Cargo.toml  Makefile  bf.rs  bf2rs.rs  brainfuck.rs  brainfuck.s  lldb-commands.txt  main.rs  tests.rs  translate.rs  translate.sh
rust/src/: bf.rs  lib.rs  main.rs  translate.rs
rust/tests/: tests.rs
samples/: rot13.bf
wasm/: Cargo.toml  Makefile  index.html
wasm/src/: lib.rs
