[package]
name = "brainfuck"
default-run = "brainfuck"
version = "0.1.0"
authors = ["Pablo Jorge <pablohjorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 3

[[bin]]
name = "translate"
path = "src/translate.rs"