[package]
name = "wasm-brainfuck"
version = "0.1.0"
authors = ["Pablo Jorge <pablohhjorge@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
num = "0.3.0"
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
